@@ -1449,230 +1449,3 @@ echo "$a#define SENDMAIL $SENDMAIL $z/* how to send mail */"
 
 : configuring TZ_must_be_set
 echo "#define TZ_must_be_set 0 /* Must TZ be set for gmtime() to work?  */"
-
-
-$ech >&3 "$0: configuring standard library declarations $dots"
-
-cat <<'EOF'
-
-
-
-/* Adjust the following declarations as needed.  */
-EOF
-
-cat >a.ha <<EOF
-
-
-/* The rest is for the benefit of non-standard, traditional hosts.  */
-/* Don't bother to declare functions that in traditional hosts do not appear, */
-/* or are declared in .h files, or return int or void.  */
-
-
-/* traditional BSD */
-
-#if has_sys_siglist && !defined(sys_siglist)
-	extern char const * const sys_siglist[];
-#endif
-
-
-/* Posix (ISO/IEC 9945-1: 1990 / IEEE Std 1003.1-1990) */
-
-/* <fcntl.h> */
-#ifdef O_CREAT
-#	define open_can_creat 1
-#else
-#	define open_can_creat 0
-#	define O_RDONLY 0
-#	define O_WRONLY 1
-#	define O_RDWR 2
-#	define O_CREAT 01000
-#	define O_TRUNC 02000
-#endif
-#ifndef O_EXCL
-#define O_EXCL 0
-#endif
-
-/* <sys/stat.h> */
-#ifndef S_IRUSR
-#	ifdef S_IREAD
-#		define S_IRUSR S_IREAD
-#	else
-#		define S_IRUSR 0400
-#	endif
-#	ifdef S_IWRITE
-#		define S_IWUSR S_IWRITE
-#	else
-#		define S_IWUSR (S_IRUSR/2)
-#	endif
-#endif
-#ifndef S_IRGRP
-#	if has_getuid
-#		define S_IRGRP (S_IRUSR / 0010)
-#		define S_IWGRP (S_IWUSR / 0010)
-#		define S_IROTH (S_IRUSR / 0100)
-#		define S_IWOTH (S_IWUSR / 0100)
-#	else
-		/* single user OS -- not Posix or Unix */
-#		define S_IRGRP 0
-#		define S_IWGRP 0
-#		define S_IROTH 0
-#		define S_IWOTH 0
-#	endif
-#endif
-#ifndef S_ISREG
-#define S_ISREG(n) (((n) & S_IFMT) == S_IFREG)
-#endif
-
-/* <sys/wait.h> */
-#ifndef WEXITSTATUS
-#define WEXITSTATUS(stat_val) ((unsigned)(stat_val) >> 8)
-#undef WIFEXITED /* Avoid 4.3BSD incompatibility with Posix.  */
-#endif
-#ifndef WIFEXITED
-#define WIFEXITED(stat_val) (((stat_val)  &  0377) == 0)
-#endif
-#ifndef WTERMSIG
-#define WTERMSIG(stat_val) ((stat_val) & 0177)
-#undef WIFSIGNALED /* Avoid 4.3BSD incompatibility with Posix.  */
-#endif
-#ifndef WIFSIGNALED
-#define WIFSIGNALED(stat_val) ((unsigned)(stat_val) - 1  <  0377)
-#endif
-
-/* <unistd.h> */
-char *getlogin (void);
-#ifndef STDIN_FILENO
-#	define STDIN_FILENO 0
-#	define STDOUT_FILENO 1
-#	define STDERR_FILENO 2
-#endif
-#if has_fork && !has_vfork
-#	undef vfork
-#	define vfork fork
-#endif
-#if has_getcwd || !has_getwd
-	char *getcwd (char*,size_t);
-#else
-	char *getwd (char*);
-#endif
-#if has_setuid && !has_seteuid
-#	undef seteuid
-#	define seteuid setuid
-#endif
-#if has_spawn
-#	if ALL_ABSOLUTE
-#		define spawn_RCS spawnv
-#	else
-#		define spawn_RCS spawnvp
-#	endif
-#else
-#	if ALL_ABSOLUTE
-#		define exec_RCS execv
-#	else
-#		define exec_RCS execvp
-#	endif
-#endif
-
-/* utime.h */
-#if !has_utimbuf
-	struct utimbuf { time_t actime, modtime; };
-#endif
-
-
-/* Standard C library */
-
-/* <stdio.h> */
-#ifndef L_tmpnam
-#define L_tmpnam 32 /* power of 2 > sizeof("/usr/tmp/xxxxxxxxxxxxxxx") */
-#endif
-#ifndef SEEK_SET
-#define SEEK_SET 0
-#endif
-#ifndef SEEK_CUR
-#define SEEK_CUR 1
-#endif
-#if has_mktemp
-	char *mktemp (char*); /* traditional */
-#else
-	char *tmpnam (char*);
-#endif
-
-/* <stdlib.h> */
-char *getenv (char const*);
-void _exit (int) exiting;
-void exit (int) exiting;
-void *malloc (size_t);
-void *realloc (void *,size_t);
-#ifndef EXIT_FAILURE
-#define EXIT_FAILURE 1
-#endif
-#ifndef EXIT_SUCCESS
-#define EXIT_SUCCESS 0
-#endif
-
-/* <string.h> */
-char *strcpy (char*,char const*);
-char *strchr (char const*,int);
-char *strrchr (char const*,int);
-void *memcpy (void*,void const*,size_t);
-void *memmove (void*,void const*,size_t);
-
-/* <time.h> */
-time_t time (time_t*);
-EOF
-
-cat >a.c <<EOF
-#include "$A_H"
-#define a 0
-#define b 1
-#if H==a
-#	include "a.ha"
-#else
-#	include "a.hb"
-#endif
-int main() { return (0); }
-EOF
-
-# Comment out lines in a.ha that the compiler rejects.
-# a.ha may not contain comments that cross line boundaries.
-# Leave the result in a.h$H.
-H=a L=1
-U=`wc -l <a.ha | sed 's| ||g'`
-commentOut='s|^[^#/][^/]*|/* & */|'
-
-until
-	test $U -lt $L  ||
-	{ $PREPARE_CC || exit;  $CS -DH=$H a.c $LS >&2 && $CS_OK; }
-do
-	case $H in
-	a) I=b;;
-	*) I=a
-	esac
-
-	# The compiler rejects some line in L..U.
-	# Use binary search to set L to be the index of the first bad line in L..U.
-	u=$U
-	while test $L -lt $u
-	do
-		M=`expr '(' $L + $u ')' / 2`
-		M1=`expr $M + 1`
-		sed "$M1,\$$commentOut" a.h$H >a.h$I || exit
-		$PREPARE_CC || exit
-		if $CS -DH=$I a.c $LS >&2 && $CS_OK
-		then L=$M1
-		else u=$M
-		fi
-	done
-
-	# Comment out the bad line.
-	badline=`sed -n "$L{p;q;}" a.h$H`
-	echo >&3 "$n$0: commenting out \`$badline' $dots"
-	sed "$L$commentOut" a.h$H >a.h$I || exit
-
-	H=$I
-	L=`expr $L + 1`
-done
-
-cat a.h$H
-
-echo >&3 OK
